[package]
name = "benchfun"
version = "0.1.2"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/cmccomb/benchfun"
homepage = "https://github.com/cmccomb/benchfun"
documentation = "http://docs.rs/benchfun"
description = "Benchmarking functions to use for optimization algorithms"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "benchmark", "functions"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
