[package]
name = "ka"
version = "0.1.3"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/yuulive/ka"
homepage = "https://github.com/yuulive/ka"
documentation = "http://docs.rs/ka"
description = "Ka benchmarking functions to use for optimization algorithms"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "benchmark", "functions"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]